Initiatize TrianglifyView and write mock onDraw to test.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sdsmdg.kd.trianglifyexample.MainActivity">
 
-    <TextView
+    <com.sdsmdg.kd.trianglify.TrianglifyView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_height="wrap_content" />
 </RelativeLayout>
