Add switch between GridTypes through TrianglifyView's onCLickListener.
- This is just for demonstration and debugging purposes, on
  touching the view, the grid changes to and fro between
  rectangular and circular arrangements.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     tools:context="com.sdsmdg.kd.trianglifyexample.MainActivity">
 
     <com.sdsmdg.kd.trianglify.TrianglifyView
+        android:id="@+id/trianglify_main_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
