Update example application to latest code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,47 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sdsmdg.kd.trianglifyexample.MainActivity">
+    <TextView
+        android:id="@+id/variance_textview"
+        android:layout_width="wrap_content"
+        android:text="Variance: "
+        android:layout_height="wrap_content" />
+    <SeekBar
+        android:id="@+id/variance_seekbar"
+        android:layout_toRightOf="@id/variance_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/cell_size_textview"
+        android:layout_below="@id/variance_textview"
+        android:layout_width="wrap_content"
+        android:text="Cell Size: "
+        android:layout_height="wrap_content" />
+    <SeekBar
+        android:id="@+id/cell_size_seekbar"
+        android:layout_toRightOf="@id/cell_size_textview"
+        android:layout_below="@+id/variance_seekbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/palette_textview"
+        android:layout_below="@id/cell_size_textview"
+        android:layout_width="wrap_content"
+        android:text="Palette: "
+        android:layout_height="wrap_content" />
+    <SeekBar
+        android:id="@+id/palette_seekbar"
+        android:layout_toRightOf="@id/palette_textview"
+        android:layout_below="@+id/cell_size_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <com.sdsmdg.kd.trianglify.TrianglifyView
         android:id="@+id/trianglify_main_view"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/cell_size_seekbar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="fill_parent"
+        />
 </RelativeLayout>
