--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -65,7 +66,15 @@
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/draw_fill_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_width="200dp"
+        android:layout_height="400dp"
+        app:cellSize="20dp"
+        app:variance="5dp"
+        app:bleedX="30dp"
+        app:bleedY="30dp"
+        app:gridType="rectangle"
+        app:palette="Oranges"
+        app:fillStrokes="true"
+        app:fillTriangle="true"
         />
 </RelativeLayout>
