--- a/trianglify/src/main/res/values/attrs.xml
+++ b/trianglify/src/main/res/values/attrs.xml
@@ -11,6 +11,7 @@
         </attr>
         <attr name="fillTriangle" format="boolean"/>
         <attr name="fillStrokes" format="boolean"/>
+        <attr name="randomColoring" format="boolean"/>
         <attr name="palette" format="enum">
             <enum name="YlGn" value="0"/>
             <enum name="YlGnBu" value="1"/>
