Add randomize feature in Demo App

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -23,47 +23,48 @@
         app:fillStrokes="false"
         app:fillTriangle="true"
         />
+    <RelativeLayout
+        android:id="@+id/about_top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:background="#FFF"
+        android:elevation="12dp">
 
+        <ImageView
+            android:id="@+id/about_back_btn"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="false"
+            android:layout_alignParentTop="true"
+            android:clickable="true"
+            android:padding="12dp"
+            android:src="@drawable/back2" />
+
+        <TextView
+            android:id="@+id/about_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="ABOUT"
+            android:textColor="#000"
+            android:textSize="25sp" />
+
+    </RelativeLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="32dp"
+        android:layout_below="@id/about_top_bar"
         android:layout_alignParentTop="true">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <RelativeLayout
-                android:id="@+id/about_top_bar"
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:background="#FFF"
-                android:elevation="12dp">
 
-                <ImageView
-                    android:id="@+id/about_back_btn"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="false"
-                    android:layout_alignParentTop="true"
-                    android:clickable="true"
-                    android:padding="12dp"
-                    android:src="@drawable/back2" />
-
-                <TextView
-                    android:id="@+id/about_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="ABOUT"
-                    android:textColor="#000"
-                    android:textSize="25sp" />
-
-            </RelativeLayout>
 
 
             <ImageView
                 android:id="@+id/about_mdg_logo"
-                android:layout_below="@id/about_top_bar"
                 android:layout_marginTop="32dp"
                 android:layout_width="175dp"
                 android:layout_height="175dp"
