Fix improper coloring of triangles

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,7 @@
         app:bleedY="50dp"
         app:gridType="rectangle"
         app:palette="Oranges"
-        app:fillStrokes="false"
+        app:fillStrokes="true"
         app:fillTriangle="true"
         app:randomColoring="false"
         />
