--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -10,6 +8,12 @@
         app:showAsAction="always"
         android:icon="@drawable/ic_refresh"
         android:title="Refresh"/>
+    <item
+        android:id="@+id/custom_palette_picker"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        android:icon="@drawable/palette_icon"
+        android:title="CustomPalettePicker"/>
     <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
