fixes #23 by introducing new attribute fillViewCompletely :bug:

--- a/trianglify/src/main/res/values/attrs.xml
+++ b/trianglify/src/main/res/values/attrs.xml
@@ -12,6 +12,7 @@
         <attr name="fillTriangle" format="boolean"/>
         <attr name="fillStrokes" format="boolean"/>
         <attr name="randomColoring" format="boolean"/>
+        <attr name="fillViewCompletely" format="boolean"/>
         <attr name="palette" format="enum">
             <enum name="Yl" value="0"/>
             <enum name="YlGn" value="1"/>
