--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:theme="@android:style/Theme.Holo.NoActionBar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -47,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="12dp"
-                android:text="Trianglify"
+                android:text="@string/app_title"
                 android:textSize="18sp"
                 android:textAlignment="center"
                 android:textColor="@color/white"/>
@@ -59,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="8dp"
-                android:text="Version 1.1.0"
+                android:text="@string/version_no"
                 android:textSize="11sp"
                 android:textAlignment="center"
                 android:textColor="@color/white"/>
@@ -72,7 +70,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="64dp"
-                android:text="developed by"
+                android:text="@string/dev_text"
                 android:textSize="12sp"
                 android:textStyle="italic"
                 android:textAlignment="center"
@@ -144,7 +142,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="0dp"
                 android:layout_marginBottom="32dp"
-                android:text="View license"
+                android:text="@string/license"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:autoLink="web"
