--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="#D3D3D3"
     tools:context="com.sdsmdg.kd.trianglifyexample.MainActivity">
+
     <com.sdsmdg.kd.trianglify.views.TrianglifyView
         android:id="@+id/trianglify_main_view"
         android:layout_centerHorizontal="true"
@@ -35,7 +36,7 @@
         <TextView
             android:id="@+id/variance_textview"
             android:layout_width="72dp"
-            android:text="Variance: "
+            android:text="@string/variance_option"
             android:textColor="#212121"
             android:layout_margin="4dp"
             android:layout_height="wrap_content" />
@@ -55,7 +56,7 @@
             android:layout_width="72dp"
             android:textColor="#212121"
             android:layout_margin="4dp"
-            android:text="Cell Size: "
+            android:text="@string/cell_size_option"
             android:layout_height="wrap_content" />
 
         <SeekBar
@@ -73,7 +74,7 @@
             android:layout_width="72dp"
             android:textColor="#212121"
             android:layout_margin="4dp"
-            android:text="Palette: "
+            android:text="@string/palette_option"
             android:layout_height="wrap_content" />
 
         <SeekBar
@@ -104,7 +105,7 @@
                 android:layout_toRightOf="@id/layout_middle_point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Random Coloring"
+                android:text="@string/random_colouring_option"
                 android:checked="false"
                 />
 
@@ -113,7 +114,7 @@
                 android:layout_toLeftOf="@id/layout_middle_point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Custom Palette"
+                android:text="@string/custom_palette_option"
                 />
 
             <CheckBox
@@ -122,7 +123,7 @@
                 android:layout_toLeftOf="@id/layout_middle_point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Draw Strokes"
+                android:text="@string/draw_strokes_option"
                 />
 
             <CheckBox
@@ -131,7 +132,7 @@
                 android:layout_toRightOf="@id/layout_middle_point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Fill Triangles"
+                android:text="@string/fill_triangles_option"
                 />
 
         </RelativeLayout>
