--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     android:theme="@android:style/Theme.Holo.NoActionBar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,15 +23,45 @@
         app:fillStrokes="true"
         app:fillTriangle="true"
         />
+    <RelativeLayout
+        android:id="@+id/about_top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:background="#FFF"
+        android:elevation="12dp">
 
+        <ImageView
+            android:id="@+id/about_back_btn"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="false"
+            android:layout_alignParentTop="true"
+            android:clickable="true"
+            android:padding="12dp"
+            android:src="@drawable/back2" />
+
+        <TextView
+            android:id="@+id/about_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="ABOUT"
+            android:textColor="#000"
+            android:textSize="25sp" />
+
+    </RelativeLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="32dp"
+        android:layout_below="@id/about_top_bar"
         android:layout_alignParentTop="true">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+
 
             <ImageView
                 android:id="@+id/about_mdg_logo"
@@ -45,10 +77,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="12dp"
-                android:text="@string/app_title"
+                android:text="Trianglify"
                 android:textSize="18sp"
                 android:textAlignment="center"
-                android:textColor="@color/white"/>
+                android:textColor="#FFF"/>
 
             <TextView
                 android:id="@+id/about_version_text"
@@ -57,10 +89,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="8dp"
-                android:text="@string/version_no"
+                android:text="Version 1.1.0"
                 android:textSize="11sp"
                 android:textAlignment="center"
-                android:textColor="@color/white"/>
+                android:textColor="#FFF"/>
 
             <TextView
                 android:id="@+id/about_brought_by"
@@ -70,11 +102,11 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="64dp"
-                android:text="@string/dev_text"
+                android:text="developed by"
                 android:textSize="12sp"
                 android:textStyle="italic"
                 android:textAlignment="center"
-                android:textColor="@color/white"/>
+                android:textColor="#FFF"/>
 
             <ImageView
                 android:id="@+id/about_trianglify_logo"
@@ -85,6 +117,7 @@
                 android:src="@drawable/logo_mdg"
                 android:scaleType="centerCrop"
                 />
+
 
             <TextView
                 android:id="@+id/about_text"
@@ -98,7 +131,7 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/mdg_description"
                 android:textAlignment="center"
-                android:textColor="@color/white"
+                android:textColor="#FFF"
                 android:textSize="12dp" />
 
 
@@ -142,9 +175,9 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="0dp"
                 android:layout_marginBottom="32dp"
-                android:text="@string/license"
+                android:text="View license"
                 android:textAlignment="center"
-                android:textColor="@color/white"
+                android:textColor="@color/colorPrimary"
                 android:autoLink="web"
                 android:clickable="true"
                 android:layout_below="@+id/about_share_link"
