--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="#D3D3D3"
     tools:context="com.sdsmdg.kd.trianglifyexample.MainActivity">
-
     <com.sdsmdg.kd.trianglify.views.TrianglifyView
         android:id="@+id/trianglify_main_view"
         android:layout_centerHorizontal="true"
@@ -36,7 +35,7 @@
         <TextView
             android:id="@+id/variance_textview"
             android:layout_width="72dp"
-            android:text="@string/variance_option"
+            android:text="Variance: "
             android:textColor="#212121"
             android:layout_margin="4dp"
             android:layout_height="wrap_content" />
@@ -56,7 +55,7 @@
             android:layout_width="72dp"
             android:textColor="#212121"
             android:layout_margin="4dp"
-            android:text="@string/cell_size_option"
+            android:text="Cell Size: "
             android:layout_height="wrap_content" />
 
         <SeekBar
@@ -74,7 +73,7 @@
             android:layout_width="72dp"
             android:textColor="#212121"
             android:layout_margin="4dp"
-            android:text="@string/palette_option"
+            android:text="Palette: "
             android:layout_height="wrap_content" />
 
         <SeekBar
@@ -105,7 +104,7 @@
                 android:layout_toRightOf="@id/layout_middle_point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/random_colouring_option"
+                android:text="Random Coloring"
                 android:checked="false"
                 />
 
@@ -114,7 +113,7 @@
                 android:layout_toLeftOf="@id/layout_middle_point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/custom_palette_option"
+                android:text="Custom Palette"
                 />
 
             <CheckBox
@@ -123,7 +122,7 @@
                 android:layout_toLeftOf="@id/layout_middle_point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/draw_strokes_option"
+                android:text="Draw Strokes"
                 />
 
             <CheckBox
@@ -132,7 +131,7 @@
                 android:layout_toRightOf="@id/layout_middle_point"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/fill_triangles_option"
+                android:text="Fill Triangles"
                 />
 
         </RelativeLayout>
