--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,25 +5,23 @@
     <item
         android:id="@+id/action_save"
         android:orderInCategory="100"
-        app:showAsAction="always"
         android:icon="@drawable/ic_action_save"
         android:title="Save"/>
     <item
         android:id="@+id/action_refresh"
         android:orderInCategory="100"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_refresh"
         android:title="Refresh"/>
     <item
         android:id="@+id/custom_palette_picker"
         android:orderInCategory="100"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/palette_icon"
         android:title="CustomPalettePicker"/>
     <item
         android:id="@+id/action_about"
         android:orderInCategory="100"
-        app:showAsAction="always"
         android:icon="@drawable/ic_about_icon"
         android:title="About"/>
 
