Remove unused UI elements and fix strings

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -23,39 +23,10 @@
         app:fillStrokes="true"
         app:fillTriangle="true"
         />
-    <RelativeLayout
-        android:id="@+id/about_top_bar"
-        android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:background="#FFF"
-        android:elevation="12dp">
-
-        <ImageView
-            android:id="@+id/about_back_btn"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="false"
-            android:layout_alignParentTop="true"
-            android:clickable="true"
-            android:padding="12dp"
-            android:src="@drawable/back2" />
-
-        <TextView
-            android:id="@+id/about_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="ABOUT"
-            android:textColor="#000"
-            android:textSize="25sp" />
-
-    </RelativeLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="32dp"
-        android:layout_below="@id/about_top_bar"
         android:layout_alignParentTop="true">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -115,7 +86,7 @@
                 android:layout_height="70dp"
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/logo_mdg"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 />
 
 
@@ -177,7 +148,7 @@
                 android:layout_marginBottom="32dp"
                 android:text="View license"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorAccent"
                 android:autoLink="web"
                 android:clickable="true"
                 android:layout_below="@+id/about_share_link"
