--- a/app/src/main/res/layout/activity_custom_palette_picker.xml
+++ b/app/src/main/res/layout/activity_custom_palette_picker.xml
@@ -23,109 +23,113 @@
         app:fillTriangle="true"
         app:randomColoring="false"
         />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?android:attr/actionBarSize">
+        <ImageView
+            android:id="@+id/custom_palette_c0"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#ffffff"
+            android:layout_marginLeft = "16dp"
+            android:layout_marginTop="32dp"
+            android:clickable="true"
+            android:src="@drawable/color_picked_imageview_border"
+            />
 
-    <ImageView
-        android:id="@+id/custom_palette_c0"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#ffffff"
-        android:layout_marginLeft = "16dp"
-        android:layout_marginTop="32dp"
-        android:clickable="true"
-        android:src="@drawable/color_picked_imageview_border"
-        />
+        <ImageView
+            android:id="@+id/custom_palette_c1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#ffffff"
+            android:layout_margin ="32dp"
+            android:layout_centerHorizontal="true"
+            android:clickable="true"
+            android:src="@drawable/color_picked_imageview_border"
+            />
 
-    <ImageView
-        android:id="@+id/custom_palette_c1"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#ffffff"
-        android:layout_margin ="32dp"
-        android:layout_centerHorizontal="true"
-        android:clickable="true"
-        android:src="@drawable/color_picked_imageview_border"
-        />
+        <ImageView
+            android:id="@+id/custom_palette_c2"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#ffffff"
+            android:layout_marginRight = "16dp"
+            android:layout_marginTop="32dp"
+            android:layout_alignParentRight="true"
+            android:clickable="true"
+            android:src="@drawable/color_picked_imageview_border"
+            />
 
-    <ImageView
-        android:id="@+id/custom_palette_c2"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#ffffff"
-        android:layout_marginRight = "16dp"
-        android:layout_marginTop="32dp"
-        android:layout_alignParentRight="true"
-        android:clickable="true"
-        android:src="@drawable/color_picked_imageview_border"
-        />
+        <ImageView
+            android:id="@+id/custom_palette_c3"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#ffffff"
+            android:layout_margin="16dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:clickable="true"
+            android:src="@drawable/color_picked_imageview_border"
+            />
 
-    <ImageView
-        android:id="@+id/custom_palette_c3"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#ffffff"
-        android:layout_margin="16dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:clickable="true"
-        android:src="@drawable/color_picked_imageview_border"
-        />
+        <ImageView
+            android:id="@+id/custom_palette_c4"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#ffffff"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="32dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:clickable="true"
+            android:src="@drawable/color_picked_imageview_border"
+            />
 
-    <ImageView
-        android:id="@+id/custom_palette_c4"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#ffffff"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="32dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:clickable="true"
-        android:src="@drawable/color_picked_imageview_border"
-        />
+        <ImageView
+            android:id="@+id/custom_palette_c5"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#ffffff"
+            android:layout_marginBottom="32dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:clickable="true"
+            android:src="@drawable/color_picked_imageview_border"
+            />
 
-    <ImageView
-        android:id="@+id/custom_palette_c5"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#ffffff"
-        android:layout_marginBottom="32dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:clickable="true"
-        android:src="@drawable/color_picked_imageview_border"
-        />
+        <ImageView
+            android:id="@+id/custom_palette_c6"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#ffffff"
+            android:layout_marginLeft="16dp"
+            android:layout_marginBottom="32dp"
+            android:layout_alignParentBottom="true"
+            android:clickable="true"
+            android:src="@drawable/color_picked_imageview_border"
+            />
 
-    <ImageView
-        android:id="@+id/custom_palette_c6"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#ffffff"
-        android:layout_marginLeft="16dp"
-        android:layout_marginBottom="32dp"
-        android:layout_alignParentBottom="true"
-        android:clickable="true"
-        android:src="@drawable/color_picked_imageview_border"
-        />
+        <ImageView
+            android:id="@+id/custom_palette_c7"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#ffffff"
+            android:layout_margin="16dp"
+            android:layout_centerVertical="true"
+            android:clickable="true"
+            android:src="@drawable/color_picked_imageview_border"
+            />
 
-    <ImageView
-        android:id="@+id/custom_palette_c7"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#ffffff"
-        android:layout_margin="16dp"
-        android:layout_centerVertical="true"
-        android:clickable="true"
-        android:src="@drawable/color_picked_imageview_border"
-        />
-
-    <ImageView
-        android:id="@+id/custom_palette_c8"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#ffffff"
-        android:layout_centerInParent="true"
-        android:clickable="true"
-        android:src="@drawable/color_picked_imageview_border"
-        />
+        <ImageView
+            android:id="@+id/custom_palette_c8"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#ffffff"
+            android:layout_centerInParent="true"
+            android:clickable="true"
+            android:src="@drawable/color_picked_imageview_border"
+            />
+    </RelativeLayout>
 
 </RelativeLayout>
